# Student-bot

./: Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: settings.py
app/dependences/: web_app.py
app/domain/: departament.py  statement.py  user.py
app/dto/: statement.py
app/infrastructure/: db.py
app/persistent/db_schemas/: __init__.py  base.py  statement.py
app/repositories/: statement.py  uow.py  user.py
app/telegram/: __init__.py  buttons.py  states.py
app/telegram/statement/: dialogs.py  handlers.py
app/telegram/support/: dialogs.py  handlers.py
app/telegram/system/: dialogs.py  handlers.py
app/use_case/: create_statement.py
app/utils/: common.py  converter.py
app/view/: get_departament.py  get_statement.py
migrations/: changelog.xml  liquibase.properties
migrations/scripts/: 20240705_0002_add_tables_f6ef28.sql  20240706_0003_add_fields_b91454.sql
